--- a/src/pages/createRequestTimeOff/CreateRequestTimeOff.css
+++ b/src/pages/createRequestTimeOff/CreateRequestTimeOff.css
@@ -4,13 +4,92 @@
 
 .create_request_time_off__content {
     display: flex;
+    font-size: large;
+    font-weight: 550;
+    margin-bottom: 1rem;
 }
 
 .content__form {
     background-color: white;
     width: 70%;
+    height: 70vh;
+    padding: 1rem 3rem 2rem 3rem;
+}
+
+.content__form__period {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 .content__info {
     width: 30%;
+    padding-left: 8rem;
 }
+
+.content__form__period__start, .content__form__period__end {
+    display: flex;
+    align-items: center;
+}
+
+.input__content {
+    border-bottom:  1px solid #D3D3D3;
+    display: flex;
+    margin: 1rem;
+    padding: .5rem 0;
+}
+
+.input__content>input {
+    border: none;
+    outline: none;
+    font-size: large;
+}
+
+.input__content>input::placeholder {
+    color: #C2C2C2;
+}
+
+.content__form__period__option>input {
+    margin: 1rem 0;
+    outline: none;
+}
+
+.content__form__decription {
+    padding: 3rem 0;
+}
+
+.content__form__decription>textarea {
+    padding: 1.5rem 0 0rem 0;
+    border: none;
+    outline: none;
+    font-size: medium;
+    border-bottom: 1px solid #C2C2C2;
+    width: 100%;
+}
+
+.content__form__decription>textarea::placeholder {
+    color: #C2C2C2;
+    letter-spacing: .07rem;
+}
+
+.content__form>form>button {
+    padding: 1rem 2rem;
+    font-size: medium;
+    color: white;
+    border: none;
+    outline: none;
+    border-radius: .4rem;
+    cursor: pointer;
+}
+.content__form>form>button:nth-of-type(1) {
+    background-color: #0066CC;
+    margin-right: 2rem;
+}
+
+.content__form>form>button:nth-of-type(2) {
+    color: #828282;
+    background-color: white;
+    border: 1px solid #C2C2C2;
+}
+
+
