--- a/src/pages/timeOffAdmin/TimeOffAdmin.css
+++ b/src/pages/timeOffAdmin/TimeOffAdmin.css
@@ -1,30 +1,41 @@
-.pending_request{
-  padding: 2rem;
+.time_off_admin{
+  
 }
-.pending_request:hover{
-  background-color: #F3F5F8;
+.time_off_admin h3{
+  font-size: 2.7rem;
+  font-weight: 700;
+  color: #333333;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
 }
-.pending_request__user_info{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.pending_request__user_info>p:first-child{
-  font-size: 1.8rem;
-  font-weight: 600;
-  color: #363636;
-  text-transform: capitalize;
-}
-.pending_request__user_info>p:nth-last-of-type(2){
-  font-size: 1.65rem;
-  font-weight: 400;
-  color: #363636;
-}
-.pending_request__user_info>p:nth-last-of-type(2)>span{
-  color: #7B7C7C;
-  margin-left: .5rem;
-}
-.pending_request__user_info>p:last-child{
-  color: #7B7C7C;
+.time_off_admin a{
+  text-decoration: underline;
+  color: var(--color-button);
   font-size: 1.5rem;
+  display: inline-block;
+  margin-top: 4rem;
+  margin-bottom: 5rem;
+}
+.time_off_admin__footer{
+  background-color: #F4F4F4;
+  padding: 3rem 10rem;
+  margin-bottom: 10rem;
+}
+.time_off_admin__footer>h3{
+  margin-top: 0;
+}
+.time_off_admin__footer>p{
+  font-size: 2rem;
+  color: #6E6E6E;
+}
+.time_off_admin__footer>p>span:not(:nth-of-type(2)){
+  color: #333333;
+  margin-right: .5rem;
+  font-weight: 600;
+
+}
+.time_off_admin__footer>p>span:nth-of-type(2){
+  margin: 0 .5rem;
+  font-weight: 600;
+
 }
