--- a/src/pages/createRequestTimeOff/CreateRequestTimeOff.css
+++ b/src/pages/createRequestTimeOff/CreateRequestTimeOff.css
@@ -72,7 +72,7 @@
     letter-spacing: .07rem;
 }
 
-.content__form>form>button {
+.content__form>button {
     padding: 1rem 2rem;
     font-size: medium;
     color: white;
@@ -81,12 +81,12 @@
     border-radius: .4rem;
     cursor: pointer;
 }
-.content__form>form>button:nth-of-type(1) {
+.content__form>button:nth-of-type(1) {
     background-color: #0066CC;
     margin-right: 2rem;
 }
 
-.content__form>form>button:nth-of-type(2) {
+.content__form>button:nth-of-type(2) {
     color: #828282;
     background-color: white;
     border: 1px solid #C2C2C2;
