--- a/src/pages/createRequestTimeOff/CreateRequestTimeOff.css
+++ b/src/pages/createRequestTimeOff/CreateRequestTimeOff.css
@@ -80,6 +80,7 @@
     outline: none;
     border-radius: .4rem;
     cursor: pointer;
+
 }
 .content__form>button:nth-of-type(1) {
     background-color: #0066CC;
@@ -90,6 +91,36 @@
     color: #828282;
     background-color: white;
     border: 1px solid #C2C2C2;
+}
+
+.limited_time_off__model_actions {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.limited_time_off__model_actions>button {
+    padding: 1rem 2rem;
+    background-color: #0066CC;
+    border: none;
+    margin-top: .5rem;
+    border-radius: .3rem;
+    cursor: pointer;
+    outline: none;
+    font-size: 1.5rem;
+    font-weight: 550
+}
+
+.validate_alert {
+    display: flex;
+    color: red;
+    font-size: 1.3rem;
+    align-items: flex-end;
+    margin-top: -1rem;
+    margin-bottom: 1rem;
+}
+
+.validate_alert>p {
+    margin-left: .3rem;
 }
 
 
