--- a/src/components/pendingRequest/PendingRequest.css
+++ b/src/components/pendingRequest/PendingRequest.css
@@ -29,6 +29,13 @@
   border-color: var(--color-reject);
 }
 
+.pending_request__action .disable{
+  background-color: #CCCCCC !important;
+  color: #A39999 !important;
+  border-color: #CCCCCC !important;
+  cursor: initial;
+}
+
 .pending_request__action label{
   font-size: 1.6rem;
   font-weight: 700;
