--- a/src/components/requestTimeOff/RequestTimeOff.css
+++ b/src/components/requestTimeOff/RequestTimeOff.css
@@ -5,7 +5,7 @@
     cursor: pointer;
 }
 
-.request_time_off:hover .request_time_off__right__actions{
+.request_time_off:hover .request_time_off__right{
     visibility: visible;
 }
 
@@ -36,17 +36,18 @@
     right: -1.4rem;
 }
 
-.request_time_off__center {
+.request_time_off__left__center {
     position: absolute;
     bottom: -.1rem;
-    right: 6.5rem;
+    right: 5.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    min-width: 11rem;
 }
 
-.request_time_off__center>p {
+
+.request_time_off__left__center>p {
     margin-top: 2rem;
     padding: 1rem 1.5rem;
     border-radius: 1.8rem;
@@ -90,31 +91,36 @@
     font-weight: 500;
 }
 
-.request_time_off__right {
+.request_time_off__center {
     font-size: medium;
     font-weight: 500;
     line-height: 2.3rem;
     padding: 0 3rem 0 5rem;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
 }
 
-.request_time_off__right__actions {
-    margin-bottom: 1rem;
-    visibility: hidden;
-}
 
-.request_time_off__right__info {
-    margin-top: 2rem;
+
+
+.request_time_off__center__info {
     display: flex;
     align-items: center;
 }
 
-.request_time_off__right__info>p {
+.request_time_off__center__info>p {
     
     color: #9F9F9F;
     font-size: 1.3rem;
 }
 
-.request_time_off__right__info>p:nth-of-type(1) {
+.request_time_off__center__info>p:nth-of-type(1) {
     margin-left: .8rem;
+}
+
+.request_time_off__right {
+  margin-right: 2rem;
+  visibility: hidden;
 }
