--- a/src/components/requestTimeOff/RequestTimeOff.css
+++ b/src/components/requestTimeOff/RequestTimeOff.css
@@ -99,7 +99,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content:space-around;
+    justify-content:space-between;
 }
 
 
@@ -108,12 +108,14 @@
 .request_time_off__center__info {
     display: flex;
     align-items: center;
+    margin-bottom: 1rem;
 }
 
 .request_time_off__center__info>p {
     
     color: #9F9F9F;
     font-size: 1.3rem;
+    
 }
 
 .request_time_off__center__info>p:nth-of-type(1) {
