--- a/src/components/timeOffCalendar/TimeOffCalendar.css
+++ b/src/components/timeOffCalendar/TimeOffCalendar.css
@@ -84,16 +84,16 @@
 }
 .time_off_calendar__user_info .primary_info{
   display: flex;
-  
+ 
 }
 
-.time_off_calendar__user_info .primary_info>p:first-child{
+.time_off_calendar__user_info .primary_info>p:first-of-type{
   color: #363636;
   font-size: 1.4rem;
   font-weight: 600;
   text-transform: capitalize;
 }
-.time_off_calendar__user_info .primary_info>p:last-child{
+.time_off_calendar__user_info .primary_info>span{
   font-size: 1.1rem;
   border-radius: 1rem;
   padding: .25rem .5rem;
