--- a/src/pages/companyProjects/actionColumn/ActionColumn.css
+++ b/src/pages/companyProjects/actionColumn/ActionColumn.css
@@ -41,3 +41,35 @@
 .projects__action-column{
   display: none;
 }
+
+.projects__icon {
+  transition: all .2s !important;
+  width: 3rem;
+  height: 3rem;
+  background-color: white;
+  border-radius: 50%;
+  margin-right: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.projects__icon:hover{
+  box-shadow: 1px 2px 7px rgba(0, 0, 0, .5);
+  transform: translateY(-1px);
+}
+.projects__icon__item{
+  color: #898989;
+  font-size: 2.3rem !important;
+  margin: 0;
+  
+}
+
+/* .projects__icon__delete{
+  color: var(--color-error);
+}
+.projects__icon__edit{
+  color: var(--color-dark-primary);
+} */
+.action_column>span{
+  
+}
