--- a/src/pages/companyProjects/actionColumn/ActionColumn.css
+++ b/src/pages/companyProjects/actionColumn/ActionColumn.css
@@ -55,7 +55,7 @@
 }
 .projects__icon:hover{
   box-shadow: 1px 2px 7px rgba(0, 0, 0, .5);
-  transform: translateY(-1px);
+  transform: scale(1.03);
 }
 .projects__icon__item{
   color: #898989;
