--- a/src/pages/createProject/teamMembers/TeamMembers.css
+++ b/src/pages/createProject/teamMembers/TeamMembers.css
@@ -1,4 +1,4 @@
-.team_members {
+/* .team_members {
   width: 80%;
   margin: 0 auto;
 }
@@ -84,4 +84,4 @@
 }
 .team_members__rate>input::-webkit-inner-spin-button{
   display: none;
-}
+} */
