--- a/src/components/projects/ProjectList.css
+++ b/src/components/projects/ProjectList.css
@@ -5,18 +5,20 @@
   padding: 1rem 1rem 2rem 1rem;
   margin: 3rem 0 3rem 3rem;
 }
+.project_list:hover::-webkit-scrollbar-thumb {
+  display: initial;
+}
 
 .project_list::-webkit-scrollbar {
   width: 2rem;
 
 }
 
-/* .project_list::-webkit-scrollbar-track {
-  border: 2px solid red;
-} */
+
 .project_list::-webkit-scrollbar-thumb {
-  background-color: var(--color-dark-tertiary);
+  background-color: #c5c5c5;
   border-radius: 5px;
+  display: none;
 }
 
 .project_list .container_dragging{
