--- a/src/components/projects/projectItem/ProjectItem.css
+++ b/src/components/projects/projectItem/ProjectItem.css
@@ -3,7 +3,8 @@
   border-bottom-right-radius: 1.5rem;
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
-  padding: 2rem;
+  padding: 3rem 2.5rem;
+  padding-top: 2rem;
   display: inline-block;
   min-width: 20rem;
   margin-right: 2rem;
@@ -14,6 +15,7 @@
 }
 
 .project_item.nonvisible{
+  padding: 2rem;
   background-color: #e9e9e9 !important;
   box-shadow: 1px 1px .2rem rgba(0, 0, 0, 0.2);
 }
