--- a/src/components/tag/Tag.css
+++ b/src/components/tag/Tag.css
@@ -1,27 +1,34 @@
 .tag__content {
   display: inline-block;
   text-align: start;
+  
 }
 
 .tag {
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: stretch;
+  font-family: 'Montserrat', sans-serif;
+  flex-wrap: wrap;
+  /* font-family: 'Quicksand', sans-serif; */
+
 }
 
 .tag__item {
   border-radius: 2.2rem;
-  display: inline-block;
   overflow: hidden;
-  transition: all 1s;
-  padding: .8rem;
+  padding: 1.15rem 1.1rem;
   margin-right: .5rem;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
+  font-weight: 500;
   text-transform: capitalize;
   background-color: var(--color-light-tertiary);
   white-space: nowrap;
-  justify-content: center;
-
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #313131;
+  margin-bottom: 1rem;
 }
 
 .tag__item>button {
@@ -30,9 +37,11 @@
   padding: 0;
   margin-left: .5rem;
   cursor: pointer;
+  
 }
 
 .tag__item>button>.MuiSvgIcon-root {
+  font-size: 1.4rem;
   color: var(--color-dark-tertiary);
-  vertical-align: middle;
+  vertical-align: top;
 }
