--- a/src/pages/discussion/content/Content.css
+++ b/src/pages/discussion/content/Content.css
@@ -35,7 +35,7 @@
 }
 
 .discussion__model_content {
-  padding: 1rem 0;
+  padding: 2rem 1rem;
 }
 
 .discussion__model_actions {
@@ -49,7 +49,7 @@
   outline: none;
   font-size: 1.6rem;
   font-weight: 500;
-  padding: .5rem 1rem;
+  padding:  1rem;
   cursor: pointer;
   border-radius: .5rem;
   color: white;
@@ -61,7 +61,9 @@
 }
 
 .discussion__model_actions>button:nth-child(2) {
-  background-color: darkgray;
+  background-color: #EEEEEE;
+  color: #363636;
+  border: 1px solid #D0D0D0;
 }
 
 .content__attributes p:nth-child(3) {
