--- a/src/pages/discussion/discussionItem/DiscussionItem.css
+++ b/src/pages/discussion/discussionItem/DiscussionItem.css
@@ -2,9 +2,10 @@
   
   margin: .3rem;
   background-color: transparent;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, .4);
   border-radius: 1rem;
-  margin-bottom: .5rem;
+  margin-bottom: 1rem;
+
   margin-right: 2rem;
 }
 .discussion_item__top{
