--- a/src/pages/report/reportitem/ReportItem.css
+++ b/src/pages/report/reportitem/ReportItem.css
@@ -29,13 +29,14 @@
 }
 
 .report_item__project_name_isDone>h3{
-    font-size: 1.75rem;
-    margin-top: 0.70rem;
+    font-size: 1.4rem;
+    margin-top: 0.7rem;
     font-weight: bold;
     color:white;
-    font-style: italic;
-    padding-left: 0.8rem;
-    padding-right: 0.8rem;
+    padding: 0.5rem;
+    border-radius: 1.5rem;
+    vertical-align: middle;
+    background-color: var(--color-error);
 }
 
 .report_item__project>p{
