--- a/src/components/projects/projectItem/ProjectItem.css
+++ b/src/components/projects/projectItem/ProjectItem.css
@@ -1,10 +1,10 @@
 .project_item {
-  border-top-right-radius: 1.5rem;
-  border-bottom-right-radius: 1.5rem;
+  border-top-right-radius: 1.3rem;
+  border-bottom-right-radius: 1.3rem;
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
-  padding: 3rem 2.5rem;
-  padding-top: 2rem;
+  padding: 1.7rem;
+
   display: inline-block;
   min-width: 20rem;
   margin-right: 2rem;
@@ -15,7 +15,8 @@
 }
 
 .project_item.nonvisible{
-  padding: 2rem;
+  /* min-width: 20rem; */
+  padding: 1.7rem;
   background-color: #e9e9e9 !important;
   box-shadow: 1px 1px .2rem rgba(0, 0, 0, 0.2);
 }
