--- a/src/components/timerCalendar/timerByDay/viewTime/ViewTime.css
+++ b/src/components/timerCalendar/timerByDay/viewTime/ViewTime.css
@@ -73,14 +73,14 @@
 .view_time__modal_action{
   display: flex;
   justify-content: flex-end;
-  margin-top: .5rem;
+  margin-top: .7rem;
 }
 .view_time__modal_action>button{
   outline: none;
   border: none;
-  padding: .5rem;
-  font-size: 1.7rem;
-  font-weight: 650;
+  padding: 1rem;
+  font-size: 1.5rem;
+  font-weight: 500;
   margin-left: .5rem;
   font-family: 'Quicksand';
   cursor: pointer;
@@ -89,10 +89,12 @@
   
 }
 .view_time__modal_action>button:nth-of-type(1){
-  background-color: var(--color-error);
+  background-color: var(--color-button);
 }
 .view_time__modal_action>button:nth-of-type(2){
-  background-color: var(--color-button);
+  background-color: #EEEEEE;
+  color: #363636;
+  border: 1px solid #363636;
 }
 
 .view_time__modal_content>p{
@@ -102,7 +104,7 @@
 
 }
 .view_time__modal_content>div{
-  padding: 0 .5rem;
+  padding: 0 1rem;
 }
 .view_time__modal_content>div>span{
   display: inline-block;
