--- a/src/components/requestTimeOff/RequestTimeOff.css
+++ b/src/components/requestTimeOff/RequestTimeOff.css
@@ -133,9 +133,14 @@
 
 .response__content>p{
     background-color: #2496F7;
-    width: 20rem;
+    width: max-content;
+    max-width: 30rem;
     padding: 1rem;
     margin-top: -1.85rem;
+    border-radius: 3px;
+    white-space: pre-line;
+    color: white;
+
 }
 .response__content {
     background-color: #FFFFFF;
