--- a/src/pages/timeOff/TimeOff.css
+++ b/src/pages/timeOff/TimeOff.css
@@ -1,3 +1,6 @@
+.time_off{
+  
+}
 .time_off button {
     padding: 1rem 2rem;
     color: white;
@@ -7,6 +10,7 @@
     border: none;
     cursor: pointer;
     outline: none;
+    
 }
 
 .time_off__limit {
