--- a/src/pages/projectDetail/ProjectDetail.css
+++ b/src/pages/projectDetail/ProjectDetail.css
@@ -3,6 +3,7 @@
     margin: 0 10%;
     overflow-x: hidden;
     font-family: 'Quicksand', sans-serif;
+    padding-bottom: 10rem;
 }
 
 .project_detail__header {
